Update location address and add newline at EOF
Shortened the address in the location section and added a newline at the end of the file.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             勤務地
           </div>
           <div class="font-bold text-slate-700">
-            兵庫県神戸市東灘区住吉宮町1-2-27
+            兵庫県神戸市東灘区
           </div>
         </div>
 
